force-app/main/default/objects/dfsle__Jobs__c/dfsle__Jobs__c.object-meta.xml
<CustomObject>
    <description>Docusign jobs queue containing doc gen requests to Docusign API</description>
    <label>Docusign Job</label>
    <nameField>
        <displayFormat>DSJOB-{0000000}</displayFormat>
        <label>Docusign Job</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docusign Jobs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>