force-app/main/default/objects/dfsle__Jobs__c/fields/dfsle__ContentVersion_Ids__c.field-meta.xml
<CustomField>
    <fullName>dfsle__ContentVersion_Ids__c</fullName>
    <description>Content version Ids of documents generated as part of the job</description>
    <label>ContentVersion Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>