force-app/main/default/objects/dfsle__Jobs__c/fields/dfsle__Gen_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Gen_Template_Id__c</fullName>
    <description>Gen Template  ID associated to the job</description>
    <label>Gen Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>