force-app/main/default/objects/dfsle__Jobs__c/fields/dfsle__Job_Status__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Job_Status__c</fullName>
    <description>Status of the jobs. Descriptions: Open - Job is queued and waiting to be picked up.  In Progress - Job is being processed. Failed - Job failed to complete please check Docusign Logs for more information</description>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed - Successful</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>