force-app/main/default/objects/dfsle__Jobs__c/fields/dfsle__JobEnvelopeStatus__c.field-meta.xml
<CustomField>
    <fullName>dfsle__JobEnvelopeStatus__c</fullName>
    <label>Sending Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>