force-app/main/default/objects/dfsle__Jobs__c/fields/dfsle__TaskId__c.field-meta.xml
<CustomField>
    <fullName>dfsle__TaskId__c</fullName>
    <description>List of task Ids associated with the job</description>
    <label>Task Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>